--- a/colpali/elastic.env
+++ b/colpali/elastic.env
@@ -1,4 +1,5 @@
-elastic_url = "<url>"
-elastic_api = "<api-key>"
-pdf-path = "<full directory plus file name .pdf>"
-index-name = "colipali"
+elastic_url = " "
+elastic_api = " "
+pdf-path = " "
+index-name = " "
+google_api_key = " "
